--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -123,3 +123,16 @@
         background: #333;
     }
     
+
+.trow {
+    padding: 0.75rem;
+
+    &:hover {
+        background-color: rgba(0, 45, 85, 87.5%);
+        color: #fff;
+
+        svg {
+            display: block;
+        }
+    }
+}
