--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -132,7 +132,8 @@
         color: #fff;
 
         svg {
-            display: block;
+            visibility: visible !important;
+
         }
     }
 }
