--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,113 +12,27 @@
 .notif_body::-webkit-scrollbar-thumb {
         background-color: #646464;
 }
-/* .nav-button {
-    transition: color 0.2s !important;
-}
 
-
-#nav-content-highlight{
-    transition: top 0.2s !important;
-}
-
-#nav-content-highlight:before,
-#nav-content-highlight:after {
-    content: "" !important;
-    position: absolute !important;
-    right: 0 !important;
-    bottom: 24px !important;
-    width: 32px !important;
-    height: 32px !important;
-    border-radius: 50% !important;
-    box-shadow: 16px 16px 0 0 rgb(243 244 246) !important;
-}
-
-#nav-content-highlight:after {
-    top: 24px !important;
-    box-shadow: 16px -16px rgb(243 244 246) !important;
-}
-
-
-
-.nav-button:nth-of-type(1):hover {
-    color: rgb(30 58 138) !important;
-}
-
-.nav-button:nth-of-type(1):hover~#nav-content-highlight {
-    top: 16px !important;
-}
-
-.nav-button:nth-of-type(2):hover {
-    color: rgb(30 58 138) !important;
-}
-
-.nav-button:nth-of-type(2):hover~#nav-content-highlight {
-    top: 70px !important;
-}
-
-.nav-button:nth-of-type(3):hover {
-    color: rgb(30 58 138) !important;
-}
-
-.nav-button:nth-of-type(3):hover~#nav-content-highlight {
-    top: 124px !important;
-}
-
-.nav-button:nth-of-type(4):hover {
-    color: rgb(30 58 138) !important;
-}
-
-.nav-button:nth-of-type(4):hover~#nav-content-highlight {
-    top: 178px !important;
-}
-
-.nav-button:nth-of-type(5):hover {
-    color: rgb(30 58 138) !important;
-}
-
-.nav-button:nth-of-type(5):hover~#nav-content-highlight {
-    top: 232px !important;
-}
-
-.nav-button:nth-of-type(6):hover {
-    color: rgb(138, 73, 30) !important;
-}
-
-.nav-button:nth-of-type(6):hover~#nav-content-highlight {
-    top: 286px !important;
-}
-
-.nav-button:nth-of-type(7):hover {
-    color: rgb(30 58 138) !important;
-}
-
-.nav-button:nth-of-type(7):hover~#nav-content-highlight {
-    top: 340px !important;
-} */
 /* The entire scrollbar */
 ::-webkit-scrollbar {
-        width: 12px; /* Width of the vertical scrollbar */
-        height: 12px; /* Height of the horizontal scrollbar */
+        width: 12px; 
+        height: 12px;
     }
     
-    /* The track (background) of the scrollbar */
     ::-webkit-scrollbar-track {
         background: #f1f1f1;
         border-radius: 10px;
     }
     
-    /* The draggable part of the scrollbar */
     ::-webkit-scrollbar-thumb {
         background: #888;
         border-radius: 10px;
     }
     
-    /* When you hover over the scrollbar */
     ::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
     
-    /* When you click on the scrollbar */
     ::-webkit-scrollbar-thumb:active {
         background: #333;
     }
